--- a/public/index.html
+++ b/public/index.html
@@ -61,22 +61,28 @@
 
             </div>
         </div>
-
-
-        <div id="decoration" class="w-full h-24 max-h-24 absolute -mt-48 2xl:-mt-28 bg-repeat-x opacity-50 " style="background-image: url(./images/separador_2.png); background-size: contain;"></div>
+        <div class="w-full h-24 max-h-24 absolute -mt-48 2xl:-mt-28 bg-repeat-x opacity-50 " style="background-image: url(./images/separador_2.png); background-size: contain;"></div>
     </section>
 
     <section id="projects-and-stuff">
         <div class="mx-auto w-11/12">
-            <h1 class="font-bold underline text-2xl"> This is what i do </h1>
-
+            <h1 class="font-bold underline text-2xl"> ¡Take a look at some of my projects! </h1>
             <div class="grid grid-cols-1 lg:grid-cols-2 2xl:grid-cols-3 gap-8 w-3/4 mx-auto">
+
+                <div class="mx-auto my-4 rounded-sm">
+                    <div class="shadow-lg lg:mt-12">
+                        <img class="w-full mx-auto" src="./images/info_1.png" alt="Click on the images to learn more">
+                    </div>
+                </div>
+
                 <div class="mx-auto shadow-lg my-4 rounded-sm bg-custom-600 border-4 border-gray-700">
                     <div class="mt-2 text-center border-b-2 border-black py-3">
                         <h2 class="font-bold text-lg">Management of Hospitalary Assets</h2>
                     </div>
                     <div>
-                        <img class="max-h-48 md:max-h-64 2xl:max-h-56 md:w-11/12 sm:w-full lg:w-full mx-auto" src="./images/statistics_1.jpg" alt="Statistics graphics image">
+                        <a target="blank" href="https://eav.upb.edu.co/gestion-activos-web/">
+                            <img class="max-h-48 md:max-h-64 2xl:max-h-56 w-full mx-auto" src="./images/statistics_1.jpg" alt="Statistics graphics image">
+                        </a>
                     </div>
 
                     <div class="text my-8 align-middle px-2 text-center">
@@ -91,8 +97,8 @@
                         <h2 class="font-bold text-lg">Music Sheet Database</h2>
                     </div>
                     <div>
-                        <a href="https://github.com/mahc30/staferep">
-                            <img class="max-h-48 md:max-h-64 2xl:max-h-56 md:w-11/12 sm:w-full lg:w-full mx-auto" src="./images/music_sheet_1.jpg" alt="Woman reading music sheet">
+                        <a target="blank" href="https://github.com/mahc30/staferep">
+                            <img class="max-h-48 md:max-h-64 2xl:max-h-56 w-full sm:w-full lg:w-full mx-auto" src="./images/music_sheet_1.jpg" alt="Woman reading music sheet">
                         </a>
                     </div>
                     <div class="text my-8 align-middle px-2 text-center">
@@ -105,16 +111,29 @@
                         <h2 class="font-bold text-lg">Education Clusters Analysis</h2>
                     </div>
                     <div>
-                        <a href="https://github.com/mahc30/cluster-investigation-analysis">
-                            <img class="max-h-48 md:max-h-64 2xl:max-h-56 md:w-11/12 sm:w-full lg:w-full mx-auto" src="./images/cluster_1.png" alt="Education Clusters Representation">
+                        <a target="blank" href="https://play.google.com/store/apps/details?id=com.lld.android.app&hl=es">
+                            <img class="max-h-48 md:max-h-64 2xl:max-h-56 w-full sm:w-full lg:w-full mx-auto" src="./images/cluster_1.png" alt="Education Clusters Representation">
                         </a>
                     </div>
                     <div class="text my-8 align-middle px-2 text-center">
                         <p>Statistic Analysis of posible education focuses for the creation of a city wide studies plan amid covid19 pandemic economic recovery efforts.</p>
                     </div>
                 </div>
+
+                <div class="mx-auto shadow-lg my-4 rounded-sm bg-custom-600 border-4 border-gray-700">
+                    <div class="mt-2 text-center border-b-2 border-black py-3">
+                        <h2 class="font-bold text-lg">AilenSweeper</h2>
+                    </div>
+                    <div>
+                        <a target="blank" href="https://play.google.com/store/apps/details?id=com.lld.android.app&hl=es">
+                            <img class="max-h-48 md:max-h-64 2xl:max-h-56 w-full sm:w-full lg:w-full mx-auto" src="./images/ailensweeper_logo.png" alt="AilenSweeper">
+                        </a>
+                    </div>
+                    <div class="text my-8 align-middle px-2 text-center">
+                        <p>A Classical Minesweeper game logic with a synthwave twist in GUI and gameplay. Made as a hybrid application for android. ¡Click on the image or <a class="underline font-bold" target="blank" href="https://play.google.com/store/apps/details?id=com.lld.android.app&hl=es">here</a>                            to download it from the Play Store!</p>
+                    </div>
+                </div>
             </div>
-        </div>
     </section>
     <div id="decoration" class="w-full h-24 max-h-24 bg-repeat-x opacity-50 " style="background-image: url(./images/separador_2.png); background-size: contain;"></div>
 
@@ -125,21 +144,41 @@
             <div class="grid grid-cols-1 lg:grid-cols-2 2xl:grid-cols-3 gap-8 w-3/4 mx-auto">
                 <div class="mx-auto shadow-lg my-4 rounded-sm bg-custom-600 border-4 border-gray-700">
                     <div class="mt-2 text-center border-b-2 border-black py-3">
-                        <h4 class="font-bold text-lg"> Operating Systems Course Teaching Assistant </h4>
+                        <h4 class="font-bold text-lg"> Operating Systems Course Tutor </h4>
                     </div>
                     <div>
-                        <img class="max-h-48 md:max-h-64 2xl:max-h-56 mx-auto w-full" src="./images/linux_icon.png" alt="Tux picture">
+                        <img class="max-h-48 md:max-h-64 2xl:max-h-56 md:w-11/12 sm:w-full lg:w-full mx-auto" src="./images/linux_icon.png" alt="Tux picture">
                     </div>
 
                     <div class="text my-8 align-middle px-2 text-center">
-                        <strong>2021 - ?</strong>
+                        <strong>January 2021 - ?</strong>
                         <p>
-                            Helped students of the course Operating Systems (CS401) by reviewing and providing feedback to students questions and programs written in C and transpiling code examples to Rust and C++
+                            Helped students of the course Operating Systems (CS401) by reviewing and providing feedback to students questions and programs written in C language. Also helped transpiling code examples and guides from C to Rust.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="mx-auto shadow-lg my-4 rounded-sm bg-custom-600 border-4 border-gray-700">
+                    <div class="mt-2 text-center border-b-2 border-black py-3">
+                        <a target="blank" href=" https://www.misiontic2022.gov.co/portal/">
+                            <h4 class="font-bold text-lg"> Misión TIC</h4>
+                        </a>
+                    </div>
+                    <div>
+                        <img class="max-h-48 md:max-h-64 2xl:max-h-56 w-11/12 mx-auto my-2" src="https://media-exp1.licdn.com/dms/image/C4E0BAQHj3pwWf6nmdw/company-logo_200_200/0?e=2159024400&v=beta&t=WeUA5fSiVRRnNg8V3xAoKpJhE6cGsfK7LurrJU_9KnY" alt="Tux picture">
+                    </div>
+
+                    <div class="text my-8 align-middle px-2 text-center">
+                        <strong>July 2021 - ?</strong>
+                        <p>
+                            Created programming challenges for a country-wide iniciative to train 100.000 people in skills and talents for the fourth industrial revolution. Implemented unit tests for said challenges to optimize the process utilizing an automatic code grading tool.
                         </p>
                     </div>
                 </div>
             </div>
         </div>
+
+
         <div id="decoration" class="w-full h-24 max-h-24 bg-repeat-x opacity-50 " style="background-image: url(./images/separador_2.png); background-size: contain;"></div>
     </section>
 
