--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Welcome</title>
+    <title>¡Hello! I'm Miguel</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <meta name="description" content="Miguel Hincapié's Software Developer Portfolio, focused primarily in full stack web development">
     <link rel='stylesheet' type='text/css' media='screen' href='./css/style.css'>
@@ -14,13 +14,13 @@
 </head>
 
 <body class="bg-custom-800 font-custom">
-    <nav id="navbar" class="relative select-none bg-grey lg:flex lg:items-stretch w-full">
-        <div class="lg:flex lg:items-stretch lg:justify-end ml-auto">
+    <nav id="navbar" class="relative select-none lg:flex lg:items-stretch w-full">
+        <div class="flex items-stretch justify-end ml-auto">
             <div class="flex flex-no-shrink items-stretch h-12">
                 <button class="flex-no-grow flex-no-shrink relative py-2 px-4 leading-normal text-gray-600 flex items-center hover:bg-grey-dark">
-                   <a class="underline font-semibold" href="./aboutMe.html"> About Me </a> </button>
+                   <!-- <a class="underline font-semibold" href="./aboutMe.html"> About Me </a> </button>
                 <button onclick="smoothScroll(document.getElementById('contact'))" class="flex-no-grow flex-no-shrink relative py-2 px-4 leading-normal text-gray-600 flex items-center hover:bg-grey-dark" href="./contact.html">
-                   <span class="underline font-semibold"> Contact </span></button>
+                   <span class="underline font-semibold"> Contact </span></button> --->
             </div>
 
         </div>
@@ -30,7 +30,7 @@
         <div class="grid-template-rows-2 max-h-screen h-screen w-11/12 mx-auto">
             <div class="grid grid-template-cols-6 h-2/4">
                 <div class="col-start-1 col-end-5 sm:col-end-4 flex">
-                    <img class="h-4/6 max-h-48 2xl:max-h-56 md:max-h-48 mt-auto ml-auto" src="./images/picretocada.png" alt="https://pbs.twimg.com/profile_images/1339174370661584902/9MJH6FNt_400x400.jpg">
+                    <img class="max-h-36 2xl:max-h-56 md:max-h-48 sm:max-h-40 mt-auto ml-auto" src="./images/picretocada.png" alt="https://pbs.twimg.com/profile_images/1339174370661584902/9MJH6FNt_400x400.jpg">
                 </div>
 
                 <div class="col-start-5 sm:col-start-4 col-end-6 align-text-bottom flex">
@@ -42,19 +42,19 @@
             <div class="flex justify-around max-h-20 md:max-h-24 h-1/6 sm:h-1/5 shadow-custom-1 xl:w-5/6 mx-auto bg-custom-600 px-28 sm:px-32 md:px-48 lg:px-64 xl:px-80 2xl:px-96">
                 <div class="my-auto">
                     <a target="blank" href="https://www.linkedin.com/in/miguel-hincapie-b970ab17a/">
-                        <img class="h-14 sm:h-16 max-h-full md:max-h-screen" src="./images/linkedin_icon.png" alt="LinkedIn">
+                        <img class="mx-12 h-14 sm:h-16 max-h-full md:max-h-screen" src="./images/linkedin_icon.png" alt="LinkedIn">
                     </a>
                 </div>
 
                 <div class="my-auto">
                     <a target="blank" href="https://github.com/mahc30">
-                        <img class="h-14 sm:h-16 max-h-full md:max-h-screen" src="./images/github_icon.png" alt="GitHub">
+                        <img class="mx-12 h-14 sm:h-16 max-h-full md:max-h-screen" src="./images/github_icon.png" alt="GitHub">
                     </a>
                 </div>
 
                 <div class="my-auto">
                     <a target="blank" href="https://twitter.com/MiguelHinkpie">
-                        <img class="h-14 sm:h-16 max-h-full md:max-h-screen" src="./images/twitter_icon.png" alt="Twitter">
+                        <img class="mx-12 h-14 sm:h-16 max-h-full md:max-h-screen" src="./images/twitter_icon.png" alt="Twitter">
                     </a>
                 </div>
 
@@ -67,7 +67,7 @@
     <section id="projects-and-stuff">
         <div class="mx-auto w-11/12">
             <h1 class="font-bold underline text-2xl"> ¡Take a look at some of my projects! </h1>
-            <div class="grid grid-cols-1 lg:grid-cols-2 2xl:grid-cols-3 gap-8 w-3/4 mx-auto">
+            <div class="grid grid-cols-1 lg:grid-cols-2 2xl:grid-cols-3 gap-8 w-100 sm:w-11/12 md:w-8/12 mx-auto">
 
                 <div class="mx-auto my-4 rounded-sm">
                     <div class="shadow-lg lg:mt-12">
@@ -81,7 +81,7 @@
                     </div>
                     <div>
                         <a target="blank" href="https://eav.upb.edu.co/gestion-activos-web/">
-                            <img class="max-h-48 md:max-h-64 2xl:max-h-56 w-full mx-auto" src="./images/statistics_1.jpg" alt="Statistics graphics image">
+                            <img class="max-h-100 md:max-h-80 lg:max-h-64 2xl:max-h-56 w-full mx-auto" src="./images/statistics_1.jpg" alt="Statistics graphics image">
                         </a>
                     </div>
 
@@ -98,7 +98,7 @@
                     </div>
                     <div>
                         <a target="blank" href="https://github.com/mahc30/staferep">
-                            <img class="max-h-48 md:max-h-64 2xl:max-h-56 w-full sm:w-full lg:w-full mx-auto" src="./images/music_sheet_1.jpg" alt="Woman reading music sheet">
+                            <img class="max-h-100 md:max-h-80 lg:max-h-64 2xl:max-h-56 w-full sm:w-full lg:w-full mx-auto" src="./images/music_sheet_1.jpg" alt="Woman reading music sheet">
                         </a>
                     </div>
                     <div class="text my-8 align-middle px-2 text-center">
@@ -111,8 +111,8 @@
                         <h2 class="font-bold text-lg">Education Clusters Analysis</h2>
                     </div>
                     <div>
-                        <a target="blank" href="https://play.google.com/store/apps/details?id=com.lld.android.app&hl=es">
-                            <img class="max-h-48 md:max-h-64 2xl:max-h-56 w-full sm:w-full lg:w-full mx-auto" src="./images/cluster_1.png" alt="Education Clusters Representation">
+                        <a target="blank" href="">
+                            <img class="max-h-100 md:max-h-80 lg:max-h-64 2xl:max-h-56 w-full sm:w-full lg:w-full mx-auto" src="./images/cluster_1.png" alt="Education Clusters Representation (No link for this one :( )">
                         </a>
                     </div>
                     <div class="text my-8 align-middle px-2 text-center">
@@ -126,7 +126,7 @@
                     </div>
                     <div>
                         <a target="blank" href="https://play.google.com/store/apps/details?id=com.lld.android.app&hl=es">
-                            <img class="max-h-48 md:max-h-64 2xl:max-h-56 w-full sm:w-full lg:w-full mx-auto" src="./images/ailensweeper_logo.png" alt="AilenSweeper">
+                            <img class="max-h-100 md:max-h-80 lg:max-h-64 2xl:max-h-56 w-full sm:w-full lg:w-full mx-auto" src="./images/ailensweeper_logo.png" alt="AilenSweeper">
                         </a>
                     </div>
                     <div class="text my-8 align-middle px-2 text-center">
@@ -141,17 +141,17 @@
         <div class="mx-auto w-11/12">
             <h1 class="font-bold underline text-2xl"> Experience </h1>
 
-            <div class="grid grid-cols-1 lg:grid-cols-2 2xl:grid-cols-3 gap-8 w-3/4 mx-auto">
+            <div class="grid grid-cols-1 lg:grid-cols-2 2xl:grid-cols-3 gap-8 w-100 sm:w-11/12 md:w-8/12 mx-auto">
                 <div class="mx-auto shadow-lg my-4 rounded-sm bg-custom-600 border-4 border-gray-700">
                     <div class="mt-2 text-center border-b-2 border-black py-3">
                         <h4 class="font-bold text-lg"> Operating Systems Course Tutor </h4>
                     </div>
                     <div>
-                        <img class="max-h-48 md:max-h-64 2xl:max-h-56 md:w-11/12 sm:w-full lg:w-full mx-auto" src="./images/linux_icon.png" alt="Tux picture">
+                        <img class="max-h-100 md:max-h-80 lg:max-h-64 2xl:max-h-56 md:w-11/12 sm:w-full lg:w-full mx-auto" src="./images/linux_icon.png" alt="Tux picture">
                     </div>
 
                     <div class="text my-8 align-middle px-2 text-center">
-                        <strong>January 2021 - ?</strong>
+                        <strong>January 2021 - June 2021</strong>
                         <p>
                             Helped students of the course Operating Systems (CS401) by reviewing and providing feedback to students questions and programs written in C language. Also helped transpiling code examples and guides from C to Rust.
                         </p>
@@ -165,13 +165,14 @@
                         </a>
                     </div>
                     <div>
-                        <img class="max-h-48 md:max-h-64 2xl:max-h-56 w-11/12 mx-auto my-2" src="https://media-exp1.licdn.com/dms/image/C4E0BAQHj3pwWf6nmdw/company-logo_200_200/0?e=2159024400&v=beta&t=WeUA5fSiVRRnNg8V3xAoKpJhE6cGsfK7LurrJU_9KnY" alt="Tux picture">
+                        <img class="max-h-100 md:max-h-80 lg:max-h-64 2xl:max-h-56 w-11/12 mx-auto my-2" src="./images/misiontic_logo.png" alt="Tux picture">
                     </div>
 
                     <div class="text my-8 align-middle px-2 text-center">
-                        <strong>July 2021 - ?</strong>
+                        <strong>July 2021 - Present</strong>
                         <p>
-                            Created programming challenges for a country-wide iniciative to train 100.000 people in skills and talents for the fourth industrial revolution. Implemented unit tests for said challenges to optimize the process utilizing an automatic code grading tool.
+                            Assisted in the design of programming challenges in an iniciative to train 100.000 people in skills and talents for the fourth industrial revolution. Implemented unit tests for said challenges to optimize the process utilizing an automatic code grading
+                            tool.
                         </p>
                     </div>
                 </div>
@@ -186,19 +187,33 @@
         <div class="mx-auto w-11/12">
             <h1 class="font-bold underline text-2xl"> Education </h1>
 
-
-            <div class="grid grid-cols-1 lg:grid-cols-2 2xl:grid-cols-3 gap-8 w-3/4 mx-auto">
+            <div class="grid grid-cols-1 lg:grid-cols-2 2xl:grid-cols-3 gap-8 w-100 sm:w-11/12 md:w-8/12 mx-auto">
                 <div class="mx-auto my-4 rounded-sm h-full bg-custom-600 shadow-xl border-4 border-gray-700">
                     <div class="mt-2 text-center border-b-2 border-black py-3">
                         <h4 class="font-bold text-lg"> Computer Science Major </h4>
                     </div>
                     <div>
-                        <img class="max-h-48 md:max-h-64 2xl:max-h-56 mx-auto w-11/12 h-40" src="./images/upb_logo.png" alt="UPB logo">
+                        <img class="max-h-100 md:max-h-80 lg:max-h-64 2xl:max-h-56 mx-auto w-11/12" src="./images/upb_logo.png" alt="UPB logo">
                     </div>
 
                     <div class="text my-8 align-middle px-2 text-center">
                         <p>
-                            Computer Science Major from Universidad Pontificia Bolivariana, graduated in 2022 with the title 'Ingeniero de Sistemas e Informática'.
+                            Computer Science Major from Universidad Pontificia Bolivariana, graduated in (Coming Soon) with the title 'Ingeniero de Sistemas e Informática'.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="mx-auto my-4 rounded-sm h-full bg-custom-600 shadow-xl border-4 border-gray-700">
+                    <div class="mt-2 text-center border-b-2 border-black py-3">
+                        <h4 class="font-bold text-lg"> Architecting with Google Compute Engine Specialization </h4>
+                    </div>
+                    <div>
+                        <img class="max-h-100 md:max-h-80 lg:max-h-64 2xl:max-h-56 mx-auto w-full" src="./images/googleCloud_logo.png" alt="UPB logo">
+                    </div>
+
+                    <div class="text my-8 align-middle px-2 text-center">
+                        <p>
+                            Completed a 9 week course about the google cloud infrastructure, from essential core services such as compute engine up to scaling and automation.
                         </p>
                     </div>
                 </div>
@@ -208,7 +223,7 @@
                         <h4 class="font-bold text-lg"> Coursera </h4>
                     </div>
                     <div>
-                        <img class="max-h-48 md:max-h-64 2xl:max-h-56 mx-auto w-full h-40" src="./images/coursera_logo.png" alt="UPB logo">
+                        <img class="max-h-100 md:max-h-80 lg:max-h-64 2xl:max-h-56 mx-auto w-full" src="./images/coursera_logo.png" alt="UPB logo">
                     </div>
 
                     <div class="text my-8 align-middle px-2 text-center">
@@ -227,39 +242,26 @@
     <section id="skillz">
         <div class="mx-auto w-11/12">
             <h1 class="font-bold underline text-2xl"> Skills </h1>
+            <p class="my-4">¡I'm a fullstack web developer! These are some of the languages and frameworks and technologies that i have worked with the most.</p>
 
-            <div class="mx-auto h-64 shadow-custom-1 my-4 rounded-sm grid grid-cols-3">
+            <div class="mx-auto h-64 shadow-custom-1 my-4 rounded-sm grid grid-cols-2">
                 <ul class="list-disc list-inside mx-auto my-auto">
 
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Javascript</li>
+                    <li>MERN stack</li>
                     <li>Typescript</li>
-                    <li>C</li>
-                    <li>C++</li>
+                    <li>.NET</li>
+                    <li>Databases</li>
                     <li>Python</li>
-                    <li>SQL</li>
-
+                    <li>C</li>
                 </ul>
                 <ul class="list-disc list-inside mx-auto my-auto">
-                    <li>NoSQL</li>
                     <li>Git</li>
                     <li>CLI</li>
                     <li>Linux</li>
-                    <li>Svelte</li>
-                    <li>React</li>
-                    <li>NodeJS</li>
-                    <li>Express</li>
-                </ul>
-                <ul class="list-disc list-inside mx-auto my-auto">
-
-                    <li>.NET</li>
-                    <li>MariaDB</li>
-                    <li>Mysql</li>
-                    <li>MongoDB</li>
                     <li>Spanish (native)</li>
                     <li>English (fluent)</li>
                     <li>German (A2)</li>
+
                 </ul>
             </div>
         </div>
