--- a/portfolio-app/public/index.html
+++ b/portfolio-app/public/index.html
@@ -22,6 +22,11 @@
 
 <body class="bg-custom-800 font-custom">
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <script>NekoType = "black"</script>
+    <h1 id=nl>
+        <script src="https://webneko.net/n20171213.js"></script><a href="https://webneko.net">Neko</a>
+    </h1>
     <div id="root"></div>
     <!--
       This HTML file is a template.
